Fixes crash if the user doesn't set a name for the bookmark (#520270).
2008-03-14  A. Walton  <awalton@svn.gnome.org>

	* libnautilus-private/nautilus-bookmark.c
	(nautilus_bookmark_compare_with):
	Fixes crash if the user doesn't set a name for the bookmark (#520270).


svn path=/trunk/; revision=13934

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-14  A. Walton  <awalton@svn.gnome.org>
+
+	* libnautilus-private/nautilus-bookmark.c
+	(nautilus_bookmark_compare_with):
+	Fixes crash if the user doesn't set a name for the bookmark (#520270).
+
 2008-03-14  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-column-chooser.c:
