Updated Belarusian Translation
svn path=/trunk/; revision=13937

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-15  Alexander Nyakhaychyk  <nab@mail.by>
+
+	* be.po: Updated Belarusian Translation.
+
 2008-03-14  Andre Klapper  <a9016009@gmx.de>
 
 	* de.po: Added missing mnemonic to German version.
