Updated Occitan translation
svn path=/trunk/; revision=13940

--- a/po/oc.po
+++ b/po/oc.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-16 12:03+0100\n"
-"PO-Revision-Date: 2008-03-16 12:09+0100\n"
+"PO-Revision-Date: 2008-03-16 14:13+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -689,6 +689,9 @@ msgid ""
 "displayed. Currently, only files ending in a tilde (~) are considered backup "
 "files."
 msgstr ""
+"S'es verai, los fichièrs de salvagarda coma los creats per Emacs son "
+"visualizats. Ara, sonque los fichièrs que s'acaban per una tilda (~) "
+"son considerats coma de fichièrs de salvagarda."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:54
 msgid ""
@@ -759,7 +762,8 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:62
 msgid "If true, icons will be laid out tighter by default in new windows."
-msgstr ""
+msgstr "S'es verai, las icònas son rengadas per defaut d'un biais compact "
+"dins las fenèstras novèlas."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:63
 msgid ""
@@ -769,7 +773,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:64
 msgid "If true, new windows will use manual layout by default."
-msgstr ""
+msgstr "S'es verai, las fenèstras novèlas utilizaràn la disposicion manuala per defaut."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:65
 msgid ""
@@ -777,28 +781,35 @@ msgid ""
 "setting is to avoid thumbnailing large images that may take a long time to "
 "load or use lots of memory."
 msgstr ""
+"Los imatges pus bèls qu'aquesta talha auràn pas de miniatura. "
+"L'objectiu d'aqueste paramètre es d'evitar que d'imatges tròp "
+"ajan de miniaturas que serián tròp longs de cargar o utilizarián "
+"tròp de memòria."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:66
 msgid "List of possible captions on icons"
-msgstr ""
+msgstr "Tièra de las legendas possiblas sus las icònas"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:67
 msgid "List of x-content/* types to ask the user what to do on insertion"
-msgstr ""
+msgstr "Tièra dels tipes  x-content/* que cal demandar una accion a "
+"l'utilizaire a l'insercion"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
 msgid "List of x-content/* types to ask the user what to do on insertion."
-msgstr ""
+msgstr "Tièra dels tipes  x-content/* que cal demandar una accion a "
+"l'utilizaire a l'insercion."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
 msgid "List of x-content/* types where a folder window should be opened"
-msgstr ""
+msgstr "Tièra dels tipes  x-content/* que cal dobrir una fenèstra de repertòri"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:70
 msgid ""
 "List of x-content/* types where a folder window should be opened on "
 "insertion."
 msgstr ""
+"Tièra dels tipes  x-content/* que cal dobrir una fenèstra de repertòri."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
 msgid "List of x-content/* where to prompt the user on insertion"
@@ -4703,6 +4714,9 @@ msgid ""
 "\n"
 "Add connect to server mount"
 msgstr ""
+"\n"
+"\n"
+"Apondre un punt de montatge amb connexion a un servidor"
 
 #: ../src/nautilus-connect-server-dialog.c:124
 msgid "Custom Location"
@@ -4718,11 +4732,11 @@ msgstr "FTP public"
 
 #: ../src/nautilus-connect-server-dialog.c:131
 msgid "FTP (with login)"
-msgstr ""
+msgstr "FTP (amb identificacion)"
 
 #: ../src/nautilus-connect-server-dialog.c:134
 msgid "Windows share"
-msgstr ""
+msgstr "Partiment Windows"
 
 #: ../src/nautilus-connect-server-dialog.c:136
 msgid "WebDAV (HTTP)"
@@ -4730,7 +4744,7 @@ msgstr "WebDAV (HTTP)"
 
 #: ../src/nautilus-connect-server-dialog.c:138
 msgid "Secure WebDAV (HTTPS)"
-msgstr ""
+msgstr "WebDAV segur (HTTPS)"
 
 #: ../src/nautilus-connect-server-dialog.c:204
 msgid "Can't Connect to Server. You must enter a name for the server."
@@ -4755,7 +4769,7 @@ msgstr "Entresenhas opcionalas :"
 #
 #: ../src/nautilus-connect-server-dialog.c:493
 msgid "_Share:"
-msgstr ""
+msgstr "_Partiment :"
 
 #: ../src/nautilus-connect-server-dialog.c:514
 msgid "_Port:"
@@ -4911,7 +4925,7 @@ msgstr "<b>Data</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:19
 msgid "<b>Default View</b>"
-msgstr ""
+msgstr "<b>Visualizacion per defaut</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:20
 msgid "<b>Executable Text Files</b>"
@@ -4923,31 +4937,31 @@ msgstr "<b>Repertòris</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:22
 msgid "<b>Icon Captions</b>"
-msgstr ""
+msgstr "<b>Legenda de las icònas</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:23
 msgid "<b>Icon View Defaults</b>"
-msgstr ""
+msgstr "<b>Paramètres per defaut de la visualizacion en icòna</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:24
 msgid "<b>List Columns</b>"
-msgstr ""
+msgstr "<b>Colomnas de la visualizacion en tièra</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:25
 msgid "<b>List View Defaults</b>"
-msgstr ""
+msgstr "<b>Paramètres per defaut de la visualizacion en tièra</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:26
 msgid "<b>Media Handling</b>"
-msgstr ""
+msgstr "<b>Gestion dels supòrts</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:27
 msgid "<b>Other Media</b>"
-msgstr ""
+msgstr "<b>Autres supòrts</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:28
 msgid "<b>Other Previewable Files</b>"
-msgstr ""
+msgstr "<b>Autras previsualizacions de fichièrs</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:29
 msgid "<b>Sound Files</b>"
@@ -4963,7 +4977,7 @@ msgstr "<b>Banasta</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:32
 msgid "<b>Tree View Defaults</b>"
-msgstr ""
+msgstr "<b>Paramètres per defaut de la visualizacion en arborescéncia</b>"
 
 #
 #: ../src/nautilus-file-management-properties.glade.h:33
@@ -4990,7 +5004,7 @@ msgstr "Demandar abans de _voidar la banasta o de suprimir de fichièrs"
 
 #: ../src/nautilus-file-management-properties.glade.h:39
 msgid "B_rowse media when inserted"
-msgstr ""
+msgstr "Explora_r lo supòrt quand l'inserissètz"
 
 #: ../src/nautilus-file-management-properties.glade.h:40
 msgid "Behavior"
@@ -5012,22 +5026,27 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:46
 msgid "CD _Audio:"
-msgstr ""
+msgstr "CD _audiò :"
 
 #: ../src/nautilus-file-management-properties.glade.h:47
 msgid ""
 "Choose the order of information to appear beneath icon names. More "
 "information will appear when zooming in closer."
 msgstr ""
+"Causissètz l'òrdre de las entresenhas que se visualizan jol nom de las "
+"icònas. Mai zoomatz sus un element, mai las entresenhas visualizadas "
+"seràn nombrosas."
 
 #: ../src/nautilus-file-management-properties.glade.h:48
 msgid "Choose the order of information to appear in the list view."
-msgstr ""
+msgstr "Causissètz l'òrdre de las entresenhas dins la visualizacion en tièra."
 
 #: ../src/nautilus-file-management-properties.glade.h:49
 msgid ""
 "Choose what happens when inserting media or connecting devices to the system"
 msgstr ""
+"Causissètz l'accion d'efectuar a l'insercion d'un supòrt o a la connexion d'un "
+"aparelh al sistèma"
 
 #: ../src/nautilus-file-management-properties.glade.h:50
 msgid "Count _number of items:"
@@ -5059,15 +5078,15 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:57
 msgid "Less common media formats can be configured here"
-msgstr ""
+msgstr "Los formats de supòrts mens frequents se pòdon configurar aicí"
 
 #: ../src/nautilus-file-management-properties.glade.h:58
 msgid "List Columns"
-msgstr ""
+msgstr "Colomnas de la visualizacion en tièra"
 
 #: ../src/nautilus-file-management-properties.glade.h:59
 msgid "Media"
-msgstr ""
+msgstr "Supòrts"
 
 #: ../src/nautilus-file-management-properties.glade.h:60
 msgid "Preview"
@@ -5075,7 +5094,7 @@ msgstr "Ulhada"
 
 #: ../src/nautilus-file-management-properties.glade.h:61
 msgid "Preview _sound files:"
-msgstr ""
+msgstr "Escota corta dels fichièrs _son :"
 
 #: ../src/nautilus-file-management-properties.glade.h:62
 msgid "Show _only folders"
@@ -5087,7 +5106,7 @@ msgstr "Visualizar las _miniaturas :"
 
 #: ../src/nautilus-file-management-properties.glade.h:64
 msgid "Show hidden and _backup files"
-msgstr ""
+msgstr "Visualizar los fichièrs amagats e de salvagarda"
 
 #: ../src/nautilus-file-management-properties.glade.h:65
 msgid "Show te_xt in icons:"
@@ -5112,7 +5131,7 @@ msgstr "_Arrengar los elements :"
 #
 #: ../src/nautilus-file-management-properties.glade.h:71
 msgid "_DVD Video:"
-msgstr ""
+msgstr "_DVD vidèo :"
 
 #: ../src/nautilus-file-management-properties.glade.h:72
 msgid "_Default zoom level:"
@@ -5132,7 +5151,7 @@ msgstr "Legidor de _musica :"
 
 #: ../src/nautilus-file-management-properties.glade.h:76
 msgid "_Never prompt or start programs on media insertion"
-msgstr ""
+msgstr "_Jamai demandar o aviar de programas a l'insercion d'un supòrt"
 
 #: ../src/nautilus-file-management-properties.glade.h:77
 msgid "_Only for files smaller than:"
@@ -5166,7 +5185,7 @@ msgstr "_Tipe :"
 
 #: ../src/nautilus-file-management-properties.glade.h:84
 msgid "_Use compact layout"
-msgstr ""
+msgstr "_Utilizar la disposicion compacta"
 
 #: ../src/nautilus-file-management-properties.glade.h:85
 msgid "_View executable text files when they are opened"
@@ -5179,6 +5198,11 @@ msgid ""
 "\n"
 "You can manually erase this file to present the druid again.\n"
 msgstr ""
+"L'existéncia d'aqueste fichièr indica que l'assistent de configuracion de\n"
+"Nautilus es estat utilizat.\n"
+"\n"
+"Podètz escafar manaualament aqueste fichièrs per tornar utilizar "
+"l'assistent.\n"
 
 #: ../src/nautilus-history-sidebar.c:285
 msgid "History"
@@ -5190,24 +5214,24 @@ msgstr "Visualizar l'istoric"
 
 #: ../src/nautilus-image-properties-page.c:232
 msgid "Camera Brand"
-msgstr ""
+msgstr "Marca de l'aparelh de fotografiar"
 
 #: ../src/nautilus-image-properties-page.c:233
 msgid "Camera Model"
-msgstr ""
+msgstr "Modèl de l'aparelh de fotografiar"
 
 #. Choose which date to show in order of relevance
 #: ../src/nautilus-image-properties-page.c:236
 msgid "Date Taken"
-msgstr ""
+msgstr "Presa lo"
 
 #: ../src/nautilus-image-properties-page.c:238
 msgid "Date Digitized"
-msgstr ""
+msgstr "Numerizada lo"
 
 #: ../src/nautilus-image-properties-page.c:244
 msgid "Exposure Time"
-msgstr ""
+msgstr "Temps d'exposicion"
 
 #: ../src/nautilus-image-properties-page.c:245
 msgid "Aperture Value"
@@ -5215,23 +5239,23 @@ msgstr "Valor de dobertura"
 
 #: ../src/nautilus-image-properties-page.c:246
 msgid "ISO Speed Rating"
-msgstr ""
+msgstr "Velocitat ISO"
 
 #: ../src/nautilus-image-properties-page.c:247
 msgid "Flash Fired"
-msgstr ""
+msgstr "Amb flash"
 
 #: ../src/nautilus-image-properties-page.c:248
 msgid "Metering Mode"
-msgstr ""
+msgstr "Mòde de mesura"
 
 #: ../src/nautilus-image-properties-page.c:249
 msgid "Exposure Program"
-msgstr ""
+msgstr "Mòde d'exposicion"
 
 #: ../src/nautilus-image-properties-page.c:250
 msgid "Focal Length"
-msgstr ""
+msgstr "Longor focala"
 
 #: ../src/nautilus-image-properties-page.c:310
 #: ../src/nautilus-query-editor.c:128
@@ -5252,7 +5276,7 @@ msgstr "Copyright"
 
 #: ../src/nautilus-image-properties-page.c:315
 msgid "Rating"
-msgstr ""
+msgstr "Classificacion"
 
 #: ../src/nautilus-image-properties-page.c:335
 msgid "Image Type:"
@@ -5299,7 +5323,7 @@ msgstr "Utilizar lo _fons per defaut"
 
 #: ../src/nautilus-information-panel.c:495
 msgid "You can't assign more than one custom icon at a time."
-msgstr ""
+msgstr "Podètz pas atribuir mai d'una icòna personalizada a l'encòp."
 
 #: ../src/nautilus-information-panel.c:525
 msgid "You can only use images as custom icons."
@@ -5331,11 +5355,11 @@ msgstr "_Emplaçament :"
 
 #: ../src/nautilus-main.c:390
 msgid "Perform a quick set of self-check tests."
-msgstr ""
+msgstr "Efectúa de tèsts de coeréncia rapids."
 
 #: ../src/nautilus-main.c:393
 msgid "Create the initial window with the given geometry."
-msgstr ""
+msgstr "Crea la fenèstra iniciala amb la geometria balhada."
 
 #: ../src/nautilus-main.c:393
 msgid "GEOMETRY"
@@ -5343,13 +5367,15 @@ msgstr "GEOMETRIA"
 
 #: ../src/nautilus-main.c:395
 msgid "Only create windows for explicitly specified URIs."
-msgstr ""
+msgstr "Crear sonque de fenèstras per d'URI especificadas desplegadament."
 
 #: ../src/nautilus-main.c:397
 msgid ""
 "Do not manage the desktop (ignore the preference set in the preferences "
 "dialog)."
 msgstr ""
+"Gerir pas lo burèu (ignora l'opcion causida dins la fenèstra de las "
+"preferéncias)."
 
 #: ../src/nautilus-main.c:399
 msgid "open a browser window."
@@ -5428,7 +5454,7 @@ msgstr "Sètz segur que volètz doblidar l'istoric ?"
 #. Translators: This is part of a joke and is paired with "Are you sure you want to forget history?"
 #: ../src/nautilus-navigation-window-menus.c:115
 msgid "If you do, you will be doomed to repeat it."
-msgstr ""
+msgstr "Se lo fasètz, serètz obligat de o tornar far."
 
 #: ../src/nautilus-navigation-window-menus.c:117
 msgid "Are you sure you want to clear the list of locations you have visited?"
@@ -5484,7 +5510,7 @@ msgstr "Barra _totas las fenèstas"
 
 #: ../src/nautilus-navigation-window-menus.c:482
 msgid "Close all Navigation windows"
-msgstr ""
+msgstr "Tampar totas las fenèstras d'exploracion"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:484
@@ -5503,7 +5529,7 @@ msgstr "Voida_r l'istoric"
 
 #: ../src/nautilus-navigation-window-menus.c:488
 msgid "Clear contents of Go menu and Back/Forward lists"
-msgstr ""
+msgstr "Voida lo contengut del menut Anar e de las tièras Precedent/seguent"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:490
@@ -5601,7 +5627,7 @@ msgstr "Anar a l'emplaçament visitat precedent"
 
 #: ../src/nautilus-navigation-window-menus.c:547
 msgid "Back history"
-msgstr ""
+msgstr "Tornar dins l'istoric"
 
 #: ../src/nautilus-navigation-window-menus.c:561
 msgid "_Forward"
@@ -5613,7 +5639,7 @@ msgstr "Anar a l'emplaçament visitat seguent"
 
 #: ../src/nautilus-navigation-window-menus.c:564
 msgid "Forward history"
-msgstr ""
+msgstr "Avançar dins l'istoric"
 
 #: ../src/nautilus-navigation-window-menus.c:578
 msgid "_Search"
@@ -5621,7 +5647,7 @@ msgstr "_Recercar"
 
 #: ../src/nautilus-navigation-window.c:183
 msgid "Toggle between button and text-based location bar"
-msgstr ""
+msgstr "Caplevar entre lo mòde de tèxt e de boton de la barra d'emplaçament"
 
 #: ../src/nautilus-navigation-window.c:938
 #, c-format
@@ -5639,7 +5665,7 @@ msgstr "Visualizar las nòtas"
 #: ../src/nautilus-places-sidebar.c:1589
 #, c-format
 msgid "Unable to poll %s for media changes"
-msgstr ""
+msgstr "Impossible de verificar de modificacions sul supòrt %s"
 
 #: ../src/nautilus-places-sidebar.c:1685
 msgid "Open in New _Window"
@@ -5659,7 +5685,7 @@ msgstr "_Montar"
 
 #: ../src/nautilus-places-sidebar.c:1733
 msgid "_Rescan"
-msgstr ""
+msgstr "_Tornar legir"
 
 #. Empty Trash menu item
 #: ../src/nautilus-places-sidebar.c:1749 ../src/nautilus-trash-bar.c:125
@@ -5672,7 +5698,7 @@ msgstr "Acorchis"
 
 #: ../src/nautilus-places-sidebar.c:2020
 msgid "Show Places"
-msgstr ""
+msgstr "Visualizar los acorchis"
 
 #. set the title and standard close accelerator
 #: ../src/nautilus-property-browser.c:279
@@ -5694,7 +5720,7 @@ msgstr "Desconsolat mas es impossible de suprimir lo motiu %s."
 
 #: ../src/nautilus-property-browser.c:977
 msgid "Check that you have permission to delete the pattern."
-msgstr ""
+msgstr "Verificatz qu'avètz las permissions per suprimir lo motiu."
 
 #: ../src/nautilus-property-browser.c:1005
 #, c-format
@@ -5703,7 +5729,7 @@ msgstr "Desconsolat mas es impossible de suprimir l'emblèma %s."
 
 #: ../src/nautilus-property-browser.c:1006
 msgid "Check that you have permission to delete the emblem."
-msgstr ""
+msgstr "Verificatz qu'avètz las permissions per suprimir l'emblèma."
 
 #: ../src/nautilus-property-browser.c:1052
 msgid "Create a New Emblem"
@@ -5744,11 +5770,11 @@ msgstr "Desconsolat mas \"%s\" es pas un nom de fichièr valid."
 #: ../src/nautilus-property-browser.c:1188
 #: ../src/nautilus-window-manage-views.c:1710
 msgid "Please check the spelling and try again."
-msgstr ""
+msgstr "Verificatz l'ortografia e tornatz ensajar."
 
 #: ../src/nautilus-property-browser.c:1190
 msgid "Sorry, but you did not supply a valid file name."
-msgstr ""
+msgstr "Desconsolat mas avètz pas balhat un nom de fichièr valid."
 
 #: ../src/nautilus-property-browser.c:1191
 msgid "Please try again."
@@ -5756,11 +5782,11 @@ msgstr "Tornatz ensajar."
 
 #: ../src/nautilus-property-browser.c:1204
 msgid "Sorry, but you can't replace the reset image."
-msgstr ""
+msgstr "Desconsolat mas podètz pas remplaçar l'imatge Reinicializar."
 
 #: ../src/nautilus-property-browser.c:1205
 msgid "Reset is a special image that cannot be deleted."
-msgstr ""
+msgstr "Reinicializar es un imatge especial que podètz pas suprimir."
 
 #: ../src/nautilus-property-browser.c:1235
 #, c-format
@@ -5794,7 +5820,7 @@ msgstr "Seleccionatz una color d'apondre"
 #: ../src/nautilus-property-browser.c:1448
 #, c-format
 msgid "Sorry, but \"%s\" is not a usable image file."
-msgstr ""
+msgstr "Desconsolat mas \"%s\" es pas un fichièr imatge utilizable."
 
 #: ../src/nautilus-property-browser.c:1432
 #: ../src/nautilus-property-browser.c:1449
@@ -5987,11 +6013,11 @@ msgstr "Tampar totas las fenèstras del repertòri"
 
 #: ../src/nautilus-throbber.c:82
 msgid "throbber"
-msgstr ""
+msgstr "animacion"
 
 #: ../src/nautilus-throbber.c:83
 msgid "provides visual status"
-msgstr ""
+msgstr "provesís un estat visual"
 
 #: ../src/nautilus-window-bookmarks.c:96
 msgid ""
@@ -6011,7 +6037,7 @@ msgstr "Avètz causit una autra visualizacion o d'anar a un autre emplaçament."
 
 #: ../src/nautilus-window-manage-views.c:679
 msgid "The location cannot be displayed with this viewer."
-msgstr ""
+msgstr "Impossible de visualizar l'emplaçament amb aquesta visualizaira."
 
 #: ../src/nautilus-window-manage-views.c:1141
 msgid "Content View"
@@ -6038,7 +6064,7 @@ msgstr "Impossible de trobar \"%s\"."
 #: ../src/nautilus-window-manage-views.c:1718
 #, c-format
 msgid "Nautilus cannot handle %s: locations."
-msgstr ""
+msgstr "Nautilus pòt pas gerir los emplaçaments %s:."
 
 #: ../src/nautilus-window-manage-views.c:1721
 msgid "Nautilus cannot handle this kind of locations."
@@ -6435,3 +6461,4 @@ msgstr "Definir lo nivèl de zoom de la visualizacion actuala"
 #: ../src/network-scheme.desktop.in.h:2
 msgid "Network"
 msgstr "Ret"
+
